fix for landing images overflow on mobile

--- a/src/app/landing/landing.component.scss
+++ b/src/app/landing/landing.component.scss
@@ -26,3 +26,11 @@
 button {
   margin-top: 20px;
 }
+@media screen and (max-width: 640px) {
+  .landing-link {
+    img {
+      width: 95%;
+      margin: auto;
+    }
+  }
+}
